<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_menu"
            android:title="@string/menu" />
        <item
            android:id="@+id/nav_todays_reservations"
            android:icon="@android:drawable/ic_menu_today"
            android:iconTint="#000000"
            android:title="@string/today_s_reservations" />
        <item
            android:id="@+id/nav_all_reservations"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/all_reservations" />
        <item
            android:id="@+id/nav_my_reservations"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/my_reservations" />
        <item
            android:id="@+id/nav_new_reservation"
            android:icon="@drawable/ic_add"
            android:title="@string/new_reservation" />
        <item
            android:id="@+id/nav_staff_management"
            android:icon="@drawable/baseline_people_24"
            android:title="Staff Management" />
        <item
            android:id="@+id/nav_preferences"
            android:icon="@drawable/ic_settings"
            android:title="@string/preferences" />
    </group>

    <group>
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/baseline_contact_phone_24"
            android:title="@string/contact_us" />
    </group>

</menu>
