<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.PreferencesFragment"
    android:padding="@dimen/padding_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/notificationCard"
        style="@style/Widget.App.CardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_card">

            <TextView
                android:id="@+id/textView8"
                style="@style/TextAppearance.App.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_md"
                android:text="@string/notification_preferences" />

            <CheckBox
                android:id="@+id/resChangeB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_sm"
                android:buttonTint="@color/primary"
                android:text="@string/reservation_changes"
                android:textAppearance="@style/TextAppearance.App.Body" />

            <CheckBox
                android:id="@+id/resRemB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_sm"
                android:buttonTint="@color/primary"
                android:text="@string/reservation_reminders"
                android:textAppearance="@style/TextAppearance.App.Body" />

            <CheckBox
                android:id="@+id/menuChangeB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/primary"
                android:text="@string/menu_changes"
                android:textAppearance="@style/TextAppearance.App.Body" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <!-- Logout Button -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/aboutMeCard"
            style="@style/Widget.App.CardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:contentPadding="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notificationCard">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_card">

                <TextView
                    android:id="@+id/textView9"
                    style="@style/TextAppearance.App.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_md"
                    android:text="@string/about_me" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameInputLayout"
                    style="@style/Widget.App.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_md"
                    android:hint="@string/name_label"
                    app:endIconMode="none">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailInputLayout"
                    style="@style/Widget.App.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_md"
                    android:hint="@string/email_label"
                    app:endIconMode="none">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phoneInputLayout"
                    style="@style/Widget.App.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    app:endIconMode="none">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:inputType="phone" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/editProfB"
                    style="@style/Widget.App.Button.Outlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_md"
                    android:text="@string/edit_profile" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/logoutB"
            style="@style/Widget.App.Button.Primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/logout"
            app:icon="@drawable/baseline_logout_24"
            app:iconGravity="textStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aboutMeCard" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
